corrected logo on small screens

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -2,9 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: transparent;
-  padding: 20px 300px;
-  position: absolute;
+  padding: 10px 20px;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -12,49 +11,18 @@
   transition: background-color 0.3s ease;
 }
 
-.logoImg {
-  width: 100px;
-  height: auto;
-}
-
 .logo {
-  width: 10vw;
-  height: auto;
-}
-
-.logo a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 7px;
-}
-
-.navLinks {
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
-}
-
-.navLinks a {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 15px;
-  font-weight: bold;
-}
-
-.socialLinks {
   display: flex;
   align-items: center;
 }
 
-.socialLink {
-  color: #fff;
-  margin-left: 15px;
-  font-size: 20px;
+.logoImg {
+  max-width: 100%;
+  height: auto;
 }
 
 .hamburger {
-  display: none;
+  display: none; /* Hide by default, will show on small screens */
   cursor: pointer;
 }
 
@@ -63,48 +31,37 @@
   height: 3px;
   background-color: #fff;
   margin: 5px;
+  transition: all 0.3s ease;
 }
 
-.solidBg {
-  background-color: #1a1a1a;
-  height: 110px;
-}
-
-@media screen and (max-width: 768px) {
-  .navLinks {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-    padding: 20px;
-    box-sizing: border-box;
-    transition: all 0.3s ease-in;
+@media (max-width: 767px) {
+  .navContainer {
+      justify-content: space-between; /* Align items to the left and right */
   }
 
-  .navLinks.open {
-    display: flex;
+  .logo {
+      order: 1; /* Ensure logo stays on the left */
+      margin-right: auto; /* Pushes all other elements to the right */
   }
-
-  .navLinks a {
-    margin: 10px 0;
-  }
-
-  .socialLinks {
-    display: none;
-  }
-
-  .hamburger {
-    display: block;
-  }
-    .logo {
-    width: 20vw; /* Increase the width for small screens */
-  }
-
   .logoImg {
-    width: 100%; /* Make the logo image fill the container */
-    height: auto; /* Maintain the aspect ratio */
+    max-width: 60px; /* Set a specific max width to control size */
+    height: auto; /* Maintain aspect ratio */
+}
+  .hamburger {
+      display: block; /* Make hamburger visible */
+      order: 2; /* Ensures that hamburger is on the right */
+  }
+
+  .navLinks, .socialLinks {
+      display: none;
+      width: 100%;
+      text-align: center;
+      margin-top: 10px;
+  }
+
+  .navLinks.open, .socialLinks.open {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
   }
 }
